/*
Copyright Suzhou Tongji Fintech Research Institute 2018 All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

		http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax="proto3";
package worldstate;
message Keys
{
	repeated string key = 1;
}
message Datas
{
	map<string,string> data = 1;
}
message CompareMes
{
	bool isinit = 1;
	bool isdatamis = 2;
	string roothash = 3;
	uint64 currentindex = 4;
	repeated string buckethash = 5;
}
message RequireMes
{
	repeated uint64 indexs = 1;
}
message SyncDataMes
{
	uint64 currentindex = 1;
	map<uint64,string> bkeys = 2;
	map<uint64,string> bhash = 3;
	map<uint64,Datas> bwd = 4;
}
enum MesType
{
	CM = 0;
	RM = 1;
	SM = 2;
	CF = 3;
	CS = 4;
}
message WDMes
{
	MesType type = 1;
	oneof realmes
	{
		CompareMes compare = 2;
		RequireMes require = 3;
		SyncDataMes sync = 4;
	}
}
